# kodi-cli

./: .gitignore  CHANGELOG.md  KodiDevelopmentFAQs.txt  LICENSE  MANIFEST.in  README.md  cfg.py  kodi_cli.py  kodi_common.py  kodi_help_tester.py  kodi_interface.py  kodi_libraray_inventory.py  kodi_namespaces.json  kodi_output_factory.py  pyproject.toml  setup.py  version.py
