[tool.poetry]
name = "kodi-cli"
version = "0.1.10"
description = "Control your Kodi instance(s) via the commandline"
authors = ["Al DAmico <JavaWiz1@hotmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/JavaWiz1/kodi-cli"
keywords = ["kodi", "cli", "command-line", "python"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
include = ["json-defs/*", "CHANGELOG.md", "*.py"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
kodi-cli = "kodi_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
